base/echo/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo
spec:
  selector:
    matchLabels:
      app: echo
  replicas: 2
  template:
    metadata:
      labels:
        app: echo
    spec:
      containers:
        - name: httpd
          image: quay.io/rhn_support_chuchang/goecho:latest
          ports:
            - containerPort: 8888
