base/echo/svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: echo
  labels:
    app: echo
spec:
  selector:
    app: echo
  ports:
  - protocol: TCP
    port: 8888
    targetPort: 8888
    name: http
  type: ClusterIP
