base/echo/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: echo
  name: echo
spec:
  port:
    targetPort: 8888
  to:
    kind: Service
    name: echo
    weight: 100
